# sktr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  sktr.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/cli/sktr_cli/: __init__.py  init_flow.py  main.py
docs/: README.md  ai.md  analyzers.md  ci.md  cli.md  configuration.md  development.md  graphs.md  limitations.md  outputs.md  plugins.md  quickstart.md  release-checklist.md  roadmap.md  troubleshooting.md
docs/schema/: README.md  sktr-review-0.1.schema.json
examples/: README.md
examples/java-basic/: README.md  pom.xml  sktr.yml
examples/java-basic/src/main/java/com/sample/controllers/: OrderController.java
examples/java-basic/src/main/java/com/sample/repositories/: OrderRepository.java
examples/java-basic/src/main/java/com/sample/services/: OrderService.java
examples/javascript-typescript-basic/: README.md  package.json  sktr.yml
examples/javascript-typescript-basic/src/controllers/: orderController.ts
examples/javascript-typescript-basic/src/repositories/: orderRepository.ts
examples/javascript-typescript-basic/src/services/: orderService.ts
examples/mixed-language-ci/: README.md  sktr.yml
examples/mixed-language-ci/src/: python_service.py
examples/mixed-language-ci/src/main/java/com/sample/: OrderService.java
examples/mixed-language-ci/src/web/: orderService.ts
examples/python-basic/: README.md  sktr.yml
examples/python-basic/controllers/: __init__.py  order_controller.py
examples/python-basic/repositories/: __init__.py  order_repository.py
examples/python-basic/services/: __init__.py  order_service.py
tests/: test_ai_advisor.py  test_ai_review.py  test_cli_graph.py  test_cli_review_scope.py  test_config.py  test_core_models.py  test_enrichment.py  test_git_diff.py  test_git_provider.py  test_graph.py  test_init.py  test_java_analyzer.py  test_javascript_analyzer.py  test_openai_provider.py  test_outputs.py  test_plugins.py  test_python_analyzer.py  test_release_polish.py  test_review_artifact.py  test_rules.py  test_summary.py  test_v018_readiness.py
