[project]
name = "sktr"
version = "0.1.0"
description = "System Knowledge & Technical Review"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.scripts]
sktr = "sktr_cli.main:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/cli", "packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/cli", "packages"]
