[project]
name = "sktr"
version = "0.13.0"
description = "System Knowledge & Technical Review"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.scripts]
sktr = "sktr_cli.main:app"

[project.entry-points."sktr.analyzers"]
python = "sktr_python:PythonAnalyzerPlugin"

[project.entry-points."sktr.rules"]
default = "sktr_rules:DefaultRulesPlugin"

[project.entry-points."sktr.outputs"]
terminal = "sktr_report:TerminalOutputPlugin"
markdown = "sktr_report:MarkdownOutputPlugin"
json = "sktr_report:JsonOutputPlugin"
mermaid = "sktr_graph:MermaidOutputPlugin"

[project.entry-points."sktr.ai_providers"]
openai = "sktr_ai:OpenAIProviderPlugin"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/cli", "packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/cli", "packages"]
