[project]
name = "sktr"
version = "1.0.0"
description = "Language-agnostic software intelligence and architecture review CLI"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Pablo Rubianes" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["architecture", "code-review", "developer-tools", "software-intelligence"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "pathspec>=0.12",
  "questionary>=2.1.1",
  "rich>=13.0",
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-java>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "typer>=0.12",
]

[project.urls]
Repository = "https://github.com/prubianes/sktr"
Issues = "https://github.com/prubianes/sktr/issues"

[project.scripts]
sktr = "sktr_cli.main:app"

[project.entry-points."sktr.analyzers"]
python = "sktr_python:PythonAnalyzerPlugin"
javascript-typescript = "sktr_javascript:JavaScriptTypeScriptAnalyzerPlugin"
java = "sktr_java:JavaAnalyzerPlugin"

[project.entry-points."sktr.rules"]
default = "sktr_rules:DefaultRulesPlugin"

[project.entry-points."sktr.outputs"]
terminal = "sktr_report:TerminalOutputPlugin"
markdown = "sktr_report:MarkdownOutputPlugin"
json = "sktr_report:JsonOutputPlugin"
mermaid = "sktr_graph:MermaidOutputPlugin"

[project.entry-points."sktr.ai_providers"]
openai = "sktr_ai:OpenAIProviderPlugin"

[dependency-groups]
dev = [
  "jsonschema>=4.0",
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/cli", "packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/cli", "packages"]
